--- a/docs/src/_includes/header.pug
+++ b/docs/src/_includes/header.pug
@@ -14,10 +14,10 @@
         img.h-1.sm_h-1x.lg_h-2(src="assets/community-logo.svg", alt="Algolia Community")
       .custom-community-projects.hidden.sm_block.absolute.z-5.pin-t.mt-3.ml-3.border.border-proton.rounded-auto.bg-white-pure.shadow-1
         .flex.flrw.pt-0x
-          a.fln.w-50.flex.flrnw.p-05.flc.hover_no-underline(href="https://community.algolia.com/docsearch/")
+          a.fln.w-50.flex.flrnw.p-05.flc.hover_no-underline(href="https://community.algolia.com/talksearch/")
             .fln.bg-teal.rounded-auto.w-2x.h-2x
-              img.w-100(src="assets/docsearch-icon.svg", alt="DocSearch")
-            .fla.pl-1.text-solstice.text-2.bold.hover_text-nebula DocSearch
+              img.w-100(src="assets/docsearch-icon.svg", alt="talksearch")
+            .fla.pl-1.text-solstice.text-2.bold.hover_text-nebula Talksearch
           a.fln.w-50.flex.flrnw.p-05.flc.hover_no-underline(href="https://community.algolia.com/jekyll-algolia/")
             .fln.bg-purple.rounded-auto.w-2x.h-2x
               img.w-100(src="assets/jekyll-icon.svg", alt="Jekyll")
@@ -65,4 +65,3 @@
     .flex.fln.flrnw.flc.pr-0x
       a.w-1x.h-1x.text-solstice.fill-current(href="https://github.com/algolia/talksearch", target="_blank")
         include ../assets/github-logo.svg
-
